<resources>
    <string name="app_name">Personal Information Banking</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="nav_home">Home</string>
    <string name="nav_vo_all">Value Opportunities</string>
    <string name="nav_vo_featured">Featured</string>
    <string name="nav_privacy_settings">Privacy Settings</string>
    <string name="nav_acct_mgmt">My Account</string>
    <string name="nav_sign_out">Sign out</string>
    <string name="nav_open_drawer">Open Drawer</string>
    <string name="nav_close_drawer">Close Drawer</string>

    <string name="title_home">Home</string>
    <string name="title_vo_all">Value Opportunities</string>
    <string name="title_vo_featured">Featured</string>
    <string name="title_privacy_setting">Privacy Settings</string>
    <string name="title_acct_mgmt">My Account</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>

    <!-- Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_learn_more">Learn more...</string>
    <string name="login_loginbtn">Login</string>
    <string name="login_mobilelogin">Mobile Login</string>
    <string name="title_vo_detail">Detail</string>
    <string name="detail_dismiss">Dismiss</string>
    <string name="detail_participate">Participate</string>
    <string name="detail_read_more">Read more</string>

</resources>
