<ScrollView
    android:id="@+id/detail_horizontal_scroll"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="false"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/detail_header"
            layout="@layout/detail_header"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_detail_dismiss"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/detail_dismiss"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_detail_participate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/detail_participate"/>

        </LinearLayout>

        <TextView
            android:id="@+id/detail_short_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:singleLine="false"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:id="@+id/detail_view_long_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/detail_read_more"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colour_primary"/>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/detail_picture_gallery"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal">
            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

</ScrollView>